--- a/Back-End/pom.xml
+++ b/Back-End/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>spring-boot-autoconfigure</artifactId>
 			<version>2.6.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.dpaukov</groupId>
+			<artifactId>combinatoricslib3</artifactId>
+			<version>3.3.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
